[gd_scene load_steps=4 format=3 uid="uid://ba2fjsu2in8kg"]

[ext_resource type="Script" path="res://scripts/LightningArea.gd" id="1_1be8m"]
[ext_resource type="PackedScene" uid="uid://c7p30yxxqn3e7" path="res://Lightning.tscn" id="2_6h54f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_elhfl"]
size = Vector2(22, 104)

[node name="Area2D" type="Area2D"]
scale = Vector2(6.2, 6.2)
script = ExtResource("1_1be8m")
lightning_scene = ExtResource("2_6h54f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.032258, 52)
shape = SubResource("RectangleShape2D_elhfl")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -10.9677
offset_right = 11.0323
offset_bottom = 104.0
color = Color(1, 0, 0, 0.443137)

[node name="Primer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Primed" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Despawn" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Primer" to="." method="_on_primer_timeout"]
[connection signal="timeout" from="Primed" to="." method="_on_primed_timeout"]
[connection signal="timeout" from="Despawn" to="." method="_on_despawn_timeout"]
